# docs/openapi.yml
@@ -1,5 +1,9 @@
 openapi: 3.0.2
 
+servers:
+  - description: API
+    url: http://localhost:8000/
+
 info:
   title: Shift
   version: 0.1.0
@@ -49,10 +53,23 @@ paths:
         - users
       summary: "Get info about user from request"
       security:
-        - bearerAuth: []
+        - JWT: []
       responses:
         "200":
           $ref: "#/components/responses/User200"
+        "401":
+          description: "Unauthorized"
+  
+  "/api/users/projects/":
+    get:
+      tags:
+        - users
+      summary: "Get info about projects of user from request"
+      security:
+        - JWT: []
+      responses:
+        "200":
+          $ref: "#/components/responses/ProjectList200"
         "401":
           description: "Unauthorized"
 
@@ -64,7 +81,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/UserCreateBody"
       responses:
-        "200":
+        "201":
           $ref: "#/components/responses/User201"
         "400":
           $ref: "#/components/responses/User400"
@@ -75,7 +92,7 @@ paths:
         - model-processes
       summary: "Create ModelProcess"
       security:
-        - bearerAuth: []
+        - JWT: []
       requestBody:
         $ref: "#/components/requestBodies/ModelProcessCreateBody"
       responses:
@@ -101,10 +118,12 @@ paths:
           description: "Id запроса к модели"
           required: true
       security:
-        - bearerAuth: []
+        - JWT: []
       responses:
         "200":
           $ref: "#/components/responses/ModelProcessDownload200"
+        "400":
+          description: "Bad request"
         "401":
           description: "Unauthorized"
         "404":
@@ -116,7 +135,7 @@ paths:
         - projects
       summary: "Create projects"
       security:
-        - bearerAuth: []
+        - JWT: []
       requestBody:
         $ref: "#/components/requestBodies/ProjectCreateBody"
       responses:
@@ -134,7 +153,7 @@ paths:
         - projects
       summary: "Get list projects"
       security:
-        - bearerAuth: []
+        - JWT: []
       parameters:
         - in: query
           name: name
@@ -164,7 +183,7 @@ paths:
           description: "Id проекта"
           required: true
       security:
-        - bearerAuth: []
+        - JWT: []
       responses:
         "200":
           $ref: "#/components/responses/Project200"
@@ -187,7 +206,7 @@ paths:
           description: "Id проекта"
           required: true
       security:
-        - bearerAuth: []
+        - JWT: []
       requestBody:
         $ref: "#/components/requestBodies/ProjectCreateBody"
       responses:
@@ -214,7 +233,7 @@ paths:
           description: "Id проекта"
           required: true
       security:
-        - bearerAuth: []
+        - JWT: []
       responses:
         "204":
           description: "No Content"
@@ -238,7 +257,7 @@ paths:
           description: "Id проекта"
           required: true
       security:
-        - bearerAuth: []
+        - JWT: []
       responses:
         "200":
           $ref: "#/components/responses/UserList200"
@@ -264,7 +283,7 @@ paths:
           description: "Id проекта"
           required: true
       security:
-        - bearerAuth: []
+        - JWT: []
       responses:
         "200":
           $ref: "#/components/responses/UserList200"
@@ -290,7 +309,7 @@ paths:
           description: "Id проекта"
           required: true
       security:
-        - bearerAuth: []
+        - JWT: []
       responses:
         "200":
           $ref: "#/components/responses/WantEnter200"
@@ -317,7 +336,7 @@ paths:
           description: "Id проекта"
           required: true
       security:
-        - bearerAuth: []
+        - JWT: []
       responses:
         "200":
           $ref: "#/components/responses/CancelWantEnter200"
@@ -336,7 +355,7 @@ paths:
         - projects
       summary: "Remove request to enter in project by owner"
       security:
-        - bearerAuth: []
+        - JWT: []
       requestBody:
         $ref: "#/components/requestBodies/MemberProjectBody"
       responses:
@@ -357,7 +376,7 @@ paths:
         - projects
       summary: "Add member to project by owner"
       security:
-        - bearerAuth: []
+        - JWT: []
       requestBody:
         $ref: "#/components/requestBodies/MemberProjectBody"
       responses:
@@ -378,7 +397,7 @@ paths:
         - projects
       summary: "Remove member to project by owner"
       security:
-        - bearerAuth: []
+        - JWT: []
       requestBody:
         $ref: "#/components/requestBodies/MemberProjectBody"
       responses:
@@ -406,7 +425,7 @@ paths:
           description: "Id проекта"
           required: true
       security:
-        - bearerAuth: []
+        - JWT: []
       responses:
         "200":
           $ref: "#/components/responses/LeaveProject200"
@@ -432,7 +451,7 @@ paths:
           description: "Id проекта"
           required: true
       security:
-        - bearerAuth: []
+        - JWT: []
       responses:
         "200":
           $ref: "#/components/responses/ModelProcessList200"
@@ -446,11 +465,11 @@ paths:
           description: "Not Found"
 
 components:
-  securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
+  securitySchemes:  
+    JWT:
+      type: apiKey  
+      in: header  
+      name: Authorization
 
   schemas:
     UserBase:
@@ -464,6 +483,8 @@ components:
           type: string
         username:
           type: string
+        email:
+          type: string
 
     UserCreate:
       type: object
@@ -475,6 +496,8 @@ components:
         username:
           type: string
         password:
+          type: string
+        email:
           type: string
 
     ModelProcessCreate:
