# server/apps/users/viewsets/user.py
@@ -5,6 +5,7 @@ from rest_framework.response import Response
 
 from apps.core.viewsets import CreateViewSet
 from apps.users.permissions import UserPermission
+from apps.projects.serializers import ProjectSerializer
 from apps.users.serializers import UserSerializer
 
 
@@ -19,9 +20,26 @@ class UserViewSet(CreateViewSet):
     def me(self, request):
         if not request.user.is_authenticated:
             return Response(
-                status=status.HTTP_403_FORBIDDEN,
+                status=status.HTTP_401_UNAUTHORIZED,
             )
         return Response(
             data=UserSerializer(request.user).data,
+            status=status.HTTP_200_OK,
+        )
+
+    @action(methods=("GET",), detail=False, url_path="projects")
+    def projects(self, request):
+        if not request.user.is_authenticated:
+            return Response(
+                status=status.HTTP_401_UNAUTHORIZED,
+            )
+        projects = request.user.projects_member.all()
+        project_serializer = ProjectSerializer(
+            projects,
+            many=True,
+            context={"request": request},
+        ).data
+        return Response(
+            data=project_serializer,
             status=status.HTTP_200_OK,
         )
